See http://netpbm.sourceforge.net/history.html for a general history of
Netpbm.

CHANGE HISTORY 
--------------

not yet  BJH  Release 10.42.00

              pamflip: Rewrite low-memory algorithm; use temp files and
              conserve virtual as well as real memory.

              pamundice: Fix bogus error about missing "-instem" option.

              Add pm_tmpfile_fd() and pm_make_tmpfile_fd().

              Various things to make it build on Windows without POSIX
              emulation.

              Build: Include LDFLAGS environment variable in link of
              build tools.
              
07.12.27 BJH  Release 10.41.00

              pamenlarge: much faster for PBM.  Thanks Prophet of the
              Way <afu@wta.att.ne.jp>.

              pamenlarge: remove arithmetic overflow.

              pnmmontage: new search algorithm to choose square
              output quickly.  Thanks "Nic Roets" <nroets@gmail.com>.

              bmptopnm: fix crash with 16 bit images.

              pamlcolor8.map: Make it a 256 color map sorted by index,
              per Palm's spec.  Thanks Paul Bolle <pebolle@tiscali.nl>.

              xwdtopnm: deal with too-large bits per pixel value in XWD 
              header.

              pamditherbw, pamsharpness, pamsharpmask, pamtopfm:
              fix crash due to write to arbitrary memory.

              pamtotiff: fix incorrect pixels with PNM maxval != TIFF
              maxval.

              pnmcrop: fix -verbose message about background color with
              -white.

              pbmmake: handle ridiculously large height, width arguments.

              pnmcat: fix arithmetic overflow.

              libnetpbm: Add arithmetic overflow protection to PBM
              routines, like PGM/PPM/PNM have had for a long time.

              libnetpbm: make all row free operations go through
              pm_freerow(); change row buffer type from char * to void *
              for pm_allocrow(), pm_freerow().
